Working on bugs.. Completed Part 1

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16096" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MVa-u9-Wiy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MVa-u9-Wiy">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
@@ -110,7 +110,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="EOy-c1-PyK">
                         <barButtonItem key="rightBarButtonItem" image="plus.app" catalog="system" id="lQO-p3-ykI">
                             <connections>
-                                <segue destination="7BF-Oa-Qz8" kind="presentation" modalPresentationStyle="fullScreen" id="lZR-E3-PsV"/>
+                                <segue destination="7BF-Oa-Qz8" kind="presentation" identifier="CreateEntryModalSegue" modalPresentationStyle="fullScreen" id="lZR-E3-PsV"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
