Core Data III - Sync Persistence

--- a/Journal/Journal/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Base.lproj/Main.storyboard
@@ -164,7 +164,7 @@
                                     <outlet property="dateLbl" destination="HIp-zK-fSL" id="i0R-oM-G8y"/>
                                     <outlet property="descriptionLbl" destination="QBu-ba-EKf" id="cRJ-z2-dUg"/>
                                     <outlet property="titleLbl" destination="iTv-GP-z2j" id="D8b-hm-QAc"/>
-                                    <segue destination="Cb9-FF-WSK" kind="show" id="1LB-by-k3x"/>
+                                    <segue destination="Cb9-FF-WSK" kind="show" identifier="ShowEntryDetailSegue" id="1LB-by-k3x"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -177,7 +177,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="04N-pr-38n">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="mae-Yq-JOq">
                             <connections>
-                                <segue destination="dus-bf-z7o" kind="presentation" identifier="DetailSegue" modalPresentationStyle="currentContext" id="nSp-Ew-Arn"/>
+                                <segue destination="dus-bf-z7o" kind="presentation" identifier="CreateEntrySegue" modalPresentationStyle="currentContext" id="nSp-Ew-Arn"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
