a bit behind today but no blockers at the moment

--- a/Journal/Journal/Views/Base.lproj/Main.storyboard
+++ b/Journal/Journal/Views/Base.lproj/Main.storyboard
@@ -158,7 +158,7 @@
                     <navigationItem key="navigationItem" title="Journal" id="r88-fB-bjr">
                         <barButtonItem key="rightBarButtonItem" image="plus.square" catalog="system" id="6I4-ZZ-9IB">
                             <connections>
-                                <segue destination="2Su-Wl-LWP" kind="presentation" identifier="" modalPresentationStyle="fullScreen" id="TtP-df-hdj"/>
+                                <segue destination="2Su-Wl-LWP" kind="presentation" identifier="CreateEntryModalSegue" modalPresentationStyle="fullScreen" id="TtP-df-hdj"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
