--- a/Journal/Journal/StoryBoard/Base.lproj/Main.storyboard
+++ b/Journal/Journal/StoryBoard/Base.lproj/Main.storyboard
@@ -15,32 +15,32 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" spacing="15" translatesAutoresizingMaskIntoConstraints="NO" id="rbA-o1-khI">
-                                <rect key="frame" x="20" y="291" width="374" height="315"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="30" translatesAutoresizingMaskIntoConstraints="NO" id="RD4-ec-uCX">
+                                <rect key="frame" x="20" y="155" width="374" height="280"/>
                                 <subviews>
-                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="6Uy-m9-Xcu">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="315"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Li6-Zw-wDx">
+                                        <rect key="frame" x="0.0" y="0.0" width="139" height="50.5"/>
                                         <subviews>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Journal Entry Title" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="lj4-MC-4kd">
-                                                <rect key="frame" x="0.0" y="0.0" width="374" height="22"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="139" height="22"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="UBB-OK-P7c">
-                                                <rect key="frame" x="0.0" y="43" width="374" height="20.5"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAu-vm-KLQ">
+                                                <rect key="frame" x="0.0" y="30" width="44" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="ceq-rb-PWc">
+                                        <rect key="frame" x="0.0" y="80.5" width="374" height="199.5"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="IDT-hv-FtF">
+                                                <rect key="frame" x="0.0" y="0.0" width="374" height="199.5"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mood" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AAu-vm-KLQ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                        <nil key="textColor"/>
-                                                        <nil key="highlightedColor"/>
-                                                    </label>
-                                                </subviews>
-                                            </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="IDT-hv-FtF">
-                                                <rect key="frame" x="0.0" y="84.5" width="374" height="230.5"/>
-                                                <subviews>
-                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="749" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fQ0-dn-m42">
+                                                    <segmentedControl opaque="NO" contentMode="scaleToFill" horizontalCompressionResistancePriority="751" verticalCompressionResistancePriority="751" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="fQ0-dn-m42">
                                                         <rect key="frame" x="0.0" y="0.0" width="374" height="32"/>
                                                         <segments>
                                                             <segment title="🙂"/>
@@ -49,17 +49,14 @@
                                                         </segments>
                                                     </segmentedControl>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Entry" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B8e-yk-hW8">
-                                                        <rect key="frame" x="0.0" y="39" width="374" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="34" width="374" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="ss2-bg-KUx">
-                                                        <rect key="frame" x="0.0" y="67.5" width="374" height="163"/>
+                                                        <rect key="frame" x="0.0" y="57.5" width="374" height="142"/>
                                                         <color key="backgroundColor" systemColor="systemGray6Color" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="163" id="R3k-Rj-Ezv"/>
-                                                        </constraints>
                                                         <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -67,22 +64,29 @@
                                                 </subviews>
                                             </stackView>
                                         </subviews>
+                                        <constraints>
+                                            <constraint firstItem="IDT-hv-FtF" firstAttribute="trailing" secondItem="ceq-rb-PWc" secondAttribute="trailingMargin" id="jCl-xL-Vub"/>
+                                        </constraints>
                                     </stackView>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstItem="ceq-rb-PWc" firstAttribute="trailing" secondItem="RD4-ec-uCX" secondAttribute="trailingMargin" id="C6B-8P-QFv"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="rbA-o1-khI" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="Xz5-8Z-seJ"/>
-                            <constraint firstItem="rbA-o1-khI" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="34" id="loH-I2-xO1"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rbA-o1-khI" secondAttribute="trailing" constant="20" id="rwT-s6-UeL"/>
+                            <constraint firstItem="RD4-ec-uCX" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="9Ff-TM-bym"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="RD4-ec-uCX" secondAttribute="bottom" constant="427" id="H93-ga-NU0"/>
+                            <constraint firstItem="RD4-ec-uCX" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="RGk-Kq-Hev"/>
+                            <constraint firstItem="RD4-ec-uCX" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="voI-8Y-r5W"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                     <navigationItem key="navigationItem" title="Create Entry" id="Jor-6s-X2K">
                         <barButtonItem key="rightBarButtonItem" systemItem="save" id="6dV-wv-USV">
                             <connections>
-                                <action selector="saveButton:" destination="BYZ-38-t0r" id="sgk-FI-Ud3"/>
+                                <action selector="saveButton:" destination="BYZ-38-t0r" id="fdc-t4-oaD"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
